エラー解消

--- a/app.json
+++ b/app.json
@@ -47,8 +47,9 @@
           }
         }
       ],
-      "expo-web-browser"
-    ],    
+      "expo-web-browser",
+      "expo-tracking-transparency"
+    ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
@@ -70,6 +71,7 @@
   },
   "react-native-google-mobile-ads": {
     "android_app_id": "ca-app-pub-6214815327107771~8358056419",
-    "ios_app_id": "ca-app-pub-6214815327107771/3336845786"
+    "ios_app_id": "ca-app-pub-6214815327107771/3336845786",
+    "user_tracking_usage_description": "関連性の高い広告を表示するためにIDをトラッキングいたします。"
   }
 }
