--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-tracking-transparency": "~6.0.8",
     "expo-updates": "~29.0.15",
     "expo-web-browser": "~15.0.10",
+    "firebase": "^12.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.68.0",
